--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BeatMapper</title>
-    <meta name="description" content="BeatMapper: Convert MP3s into Drums Rock songs with a modern web interface." />
+    <meta name="description" content="BeatMapper: Convert audio files (MP3, FLAC, WAV, OGG) into Drums Rock songs with a modern web interface." />
     <link rel="icon" href="/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet" />
     <style>
